# savsnet-geoaggregate

./: LICENSE  README.rst  pyproject.toml
savsnet_geoaggregate/: __init__.py  aggregate.py  cli.py  config.py  geo.py  linelist.py  version.py
savsnet_geoaggregate/data/: uk_lad20.gpkg
tests/: test_savsnet_geoaggregate.py
