[tool.poetry]
name = "savsnet-geoaggregate"
version = "0.1.1-alpha.0"
description = ""
authors = ["Chris Jewell <c.jewell@lancaster.ac.uk>"]

[tool.poetry.scripts]
savsnet-aggregate = 'savsnet_geoaggregate.cli:run'

[tool.poetry.dependencies]
python = "^3.6.9"
geopandas = "^0.9.0"
Rtree = "^0.9.7"
toml = "^0.10.2"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.16"

[tool.black]
line-length=80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
